public/sources/less/ui/vc-graphics/styles.less
.vcv-ui-tree-content-section-inner {
  &.vcv-ui-state--centered-content {
    display: flex;
    flex-flow: column nowrap;
    min-height: 100%;
    justify-content: center;
    flex-shrink: 0;
  }

  .vcv-ui-editor-plates-container {
    display: flex;
    flex-grow: 1;
    flex-flow: column nowrap;
    justify-content: center;
  }
}

.vcv-ui-editor-no-items {
  &-container {
    max-width: @vcui-container-max-width;
    margin: auto;
    text-align: center;

    .vcv-ui-form-helper {
      margin: @vcui-graphics-helper-margin;
      font-size: @vcui-graphics-helper-font-size;
      display: inline-block;
      text-align: left;
    }
  }

  &-image {
    margin: @vcui-graphics-image-margin;
  }

  &-action {
    position: relative;
    min-height: @vcui-graphics-action-min-height;
    padding: @vcui-graphics-action-padding;
    border-radius: @vcui-editor-element-border-radius;
    border: none;
    background: @vcui-graphics-action;
    color: @color-inverted;
    cursor: pointer;
    transition: background @transition-duration @transition-timing-function;

    &:hover {
      background: @color-base-active;
    }
  }
}

